# amice

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md  README_en_US.md  fmt.sh  rust-toolchain.toml
.github/: copilot-instructions.md
amice-llvm/: Cargo.toml  build.rs
amice-llvm/cpp/: adt_ffi.cc  amice_ffi.h  basic_block.cc  code_extractor.cc  dominators.cc  dominators_ffi.cc  ffi.cc  function.cc  instructions.cc  module.cc  utils.cc  verifier.cc
amice-llvm/src/: annotate.rs  code_extractor.rs  ffi.rs  inkwell2.rs  lib.rs  module_utils.rs
amice-llvm/src/analysis/: dominators.rs  mod.rs
amice-llvm/src/ffi/: attribute.rs  code_extractor.rs  dominators.rs  function.rs  mod.rs  module.rs  support.rs
amice-llvm/src/inkwell2/: attributes.rs  basic_block.rs  builder.rs  function.rs  instruction.rs  mod.rs  module.rs  refs.rs
amice-llvm/src/inkwell2/instruction/: add_inst.rs  alloca_inst.rs  branch_inst.rs  call_inst.rs  gep_inst.rs  load_inst.rs  mod.rs  return_inst.rs  store_inst.rs  switch_inst.rs
amice-llvm/src/ir/: basic_block.rs  branch_inst.rs  constants.rs  function.rs  mod.rs  phi_inst.rs  switch_inst.rs
amice-macro/: Cargo.toml
amice-plugin/: Cargo.toml  build.rs
amice-plugin-macros/: Cargo.toml
amice-plugin-macros/src/: lib.rs
amice-plugin/src/: ffi.rs  lib.rs  pass_builder.rs  pass_manager.rs
crates/amice/: Cargo.toml
crates/amice-build-support/: Cargo.toml
crates/amice-build-support/src/: lib.rs
crates/amice/src/: config.rs  lib.rs  pass_registry.rs
crates/amice/src/aotu/: mod.rs
crates/amice/src/aotu/alias_access/: mod.rs  pointer_chain.rs
crates/amice/src/aotu/basic_block_outlining/: mod.rs
crates/amice/src/aotu/bogus_control_flow/: polaris_primes.rs
crates/amice/src/aotu/clone_function/: mod.rs
crates/amice/src/aotu/delay_offset_loading/: mod.rs
crates/amice/src/aotu/flatten/: cf_flatten_basic.rs  mod.rs
crates/amice/src/aotu/function_wrapper/: mod.rs
crates/amice/src/aotu/indirect_branch/: mod.rs
crates/amice/src/aotu/indirect_call/: mod.rs
crates/amice/src/aotu/lower_switch/: mod.rs
crates/amice/src/aotu/mba/: binary_expr_mba.rs  config.rs  generator.rs  mod.rs
crates/amice/src/aotu/split_basic_block/: mod.rs
crates/amice/src/aotu/string_encryption/: simd_xor.rs  xor.rs
crates/amice/src/aotu/vm_flatten/: mod.rs
crates/amice/src/aotu/vm_virtualize/: mod.rs  runtime.rs  translator.rs
crates/amice/src/config/: bogus_control_flow.rs  eloquent_config.rs  indirect_branch.rs  indirect_call.rs  shuffle_blocks.rs  split_basic_block.rs  vm_virtualize.rs
crates/amice/tests/: README.md  alias_access.rs  control_flow.rs  delay_offset_loading.rs  edge_cases.rs  exception_handling.rs  indirect_call.rs  integration.rs  issue_61_cpp_fmt_strenc.rs  llvm22_switch_cases.rs  lower_switch.rs  mba.rs  rust_alias_access.rs  rust_flatten.rs  rust_indirect_branch.rs  rust_indirect_call.rs  rust_mba.rs  rust_string_encryption.rs  rust_switch_lowering.rs  rust_vm_flatten.rs  shuffle_blocks.rs  split_basic_block.rs  string_encryption.rs  vm_virtualize.rs
crates/amice/tests/c/: .gitignore
crates/amice/tests/c/fixtures/bcf_challenge/: challenge.c
crates/amice/tests/c/fixtures/control_flow/: entry_only_conditional_terminator.ll  llvm22_switch_cases.c  stale_analysis_attrs.ll  vm_flatten.c
crates/amice/tests/c/fixtures/edge_cases/: empty_function.c
crates/amice/tests/c/fixtures/exception_handling/: cpp_exception_flatten.cpp  cpp_exception_indirect_branch.cpp
crates/amice/tests/c/fixtures/function_wrapper/: clone_function.c
crates/amice/tests/c/fixtures/integration/: ama.c  crypto_pipeline.c  custom_calling_conv.c
crates/amice/tests/c/fixtures/lower_switch/: lower_switch_dummy.c
crates/amice/tests/c/fixtures/mba/: mba_constants_demo.c  mba_i128_aux.c
crates/amice/tests/c/fixtures/phi_nodes/: phi_flatten.c
crates/amice/tests/c/fixtures/shuffle_blocks/: shuffle_test.c
crates/amice/tests/c/fixtures/split_basic_block/: entry_alloca.ll
crates/amice/tests/c/fixtures/varargs/: varargs_clone_function.c  varargs_function_wrapper.c
crates/amice/tests/c/fixtures/vm_virtualize/: basic.c
crates/amice/tests/common/: cpp.rs  mod.rs  rust.rs
crates/amice/tests/rust/alias_access/src/: main.rs
crates/amice/tests/rust/bcf/src/: main.rs
crates/amice/tests/rust/clone_function/src/: main.rs
crates/amice/tests/rust/flatten/src/: main.rs
crates/amice/tests/rust/function_wrapper/src/: main.rs
crates/amice/tests/rust/indirect_branch/: Cargo.toml
crates/amice/tests/rust/indirect_call/: Cargo.toml
crates/amice/tests/rust/mba/: Cargo.toml
crates/amice/tests/rust/mba/src/: main.rs
crates/amice/tests/rust/switch_lowering/src/: main.rs
crates/amice/tests/rust/vm_flatten/: Cargo.toml
crates/amice/tests/rust/vm_virtualize/: simple.rs
crates/amice/tests/scripts/: run_tests.ps1  run_tests.sh
docs/: AndroidNDKSupport_en_US.md  AndroidNDKSupport_zh_CN.md  EnvConfig_en_US.md  EnvConfig_zh_CN.md  FunctionAnnotations.md  FunctionAnnotations_en_US.md  FunctionAnnotations_zh_CN.md  LLVMSetup.md  LLVMSetup_en_US.md  LLVMSetup_zh_CN.md  PassOrder_en_US.md  PassOrder_zh_CN.md  README.md  Troubleshooting.md  Troubleshooting_en_US.md  Troubleshooting_zh_CN.md  VMPDesign_zh_CN.md
scripts/: build_android_arm64.sh  package_android_ndk_bundle.sh
sparse-list/: Cargo.toml
src/: config.rs  lib.rs  pass_registry.rs
tests/: .gitignore  README.md  anti_objc_class_dump.mm  bogus_control_flow.c  common.rs  complex_switch_test.c  complex_switch_test.rs  const_strings.rs  control_flow.rs  edge_cases.rs  exception_handling.rs  function_wrapper.rs  function_wrapper_test.c  function_wrapper_test.rs  indirect_branch.rs  indirect_call.c  indirect_call.rs  inline_asm.rs  integration.rs  invoke_test.cc  issue_61_cpp_fmt_strenc.rs  large_string.c  large_string.rs  large_string_threshold.rs  mba.rs  md5.cc  md5.rs  multilayer_strings.rs  phi_nodes.rs  repeated_strings.c  repeated_strings.rs  rust_alias_access.rs  rust_flatten.rs  rust_indirect_branch.rs  rust_indirect_call.rs  rust_mba.rs  rust_string_encryption.rs  rust_vm_flatten.rs  (+12 more)
(+186 files in other folders)
