[package]
name = "amice"
version = "0.1.1"
edition = "2024"
authors = ["fuqiuluo"]

[lib]
name = "amice"
crate-type = ["cdylib"]

[features]
default = ["llvm20-1"]

# On Windows, llvm plugins require linking with either opt.lib,
# or lld.lib.
win-link-opt = []
win-link-lld = []

llvm11-0 = ["llvm-plugin/llvm11-0", "amice-llvm/llvm11-0"]
llvm12-0 = ["llvm-plugin/llvm12-0", "amice-llvm/llvm12-0"]
llvm13-0 = ["llvm-plugin/llvm13-0", "amice-llvm/llvm13-0"]
llvm14-0 = ["llvm-plugin/llvm14-0", "amice-llvm/llvm14-0"]
llvm15-0 = ["llvm-plugin/llvm15-0", "amice-llvm/llvm15-0"]
llvm16-0 = ["llvm-plugin/llvm16-0", "amice-llvm/llvm16-0"]
llvm17-0 = ["llvm-plugin/llvm17-0", "amice-llvm/llvm17-0"]
llvm18-1 = ["llvm-plugin/llvm18-1", "amice-llvm/llvm18-1"]
llvm19-1 = ["llvm-plugin/llvm19-1", "amice-llvm/llvm19-1"]
llvm20-1 = ["llvm-plugin/llvm20-1", "amice-llvm/llvm20-1"]

[dependencies]
amice-llvm = { path = "amice-llvm", default-features = false }
amice-macro = { path = "amice-macro", default-features = false }
llvm-plugin = { version = "0.6", features = ["default"] }
log = "0.4.27"
env_logger = "0.11.8"
bitflags = { version = "2.9.1", features = ["serde"] }
anyhow = "1.0.98"
rand = { version = "0.9.2", features = ["default"] }
ascon-hash = "0.3.1"
hex = "0.4.3"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9.5"
serde_json = "1"
ctor = "0.5.0"

[build-dependencies]
cc = "1"
lazy_static = "1"
regex = "1"
semver = "1"

[patch.crates-io]
inkwell = { git = "https://github.com/fuqiuluo/inkwell", rev = "a30816bd721e24a0882e3fe994125c2829d9021a" }
llvm-plugin = { git = "https://github.com/fuqiuluo/llvm-plugin-rs", rev = "2d8ca06c610f0a4e87cd8773634e6e9b9eee479c" }

