[workspace]
members = ["crates/*"]
default-members = ["crates/amice"]
resolver = "3"

[workspace.dependencies]
amice-build-support = { path = "crates/amice-build-support" }
amice-llvm = { path = "crates/amice-llvm", default-features = false }
amice-macro = { path = "crates/amice-macro", default-features = false }
amice-plugin = { path = "crates/amice-plugin" }
amice-plugin-macros = { path = "crates/amice-plugin-macros" }
