[package]
name = "amice-llvm"
version = "0.1.0"
edition = "2024"

[features]
default = ["llvm20-1"]
llvm11-0 = []
llvm12-0 = []
llvm13-0 = []
llvm14-0 = []
llvm15-0 = []
llvm16-0 = []
llvm17-0 = []
llvm18-1 = []
llvm19-1 = []
llvm20-1 = []

[dependencies]

[build-dependencies]
cc = "1"
lazy_static = "1"
regex = "1"
semver = "1"