[package]
name = "amice-plugin-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for amice-plugin (the `#[plugin]` entrypoint attribute)."
publish = false

# Derived from llvm-plugin-macros (Apache-2.0, James Smith),
# https://github.com/jamesmth/llvm-plugin-rs

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
syn = { version = "1", features = ["full"] }
quote = { version = "1", default-features = false }
